# xargo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
src/: cargo.rs  cli.rs  extensions.rs  flock.rs  lib.rs  rustc.rs  sysroot.rs  util.rs  xargo.rs
tests/: smoke.rs
