[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "The sysroot manager that lets you build and customize `std`"
documentation = "https://github.com/japaric/xargo#xargo"
keywords = ["cli", "cross", "compilation", "std"]
license = "MIT OR Apache-2.0"
name = "xargo"
repository = "https://github.com/japaric/xargo"
version = "0.3.26"
default-run = "xargo"
edition = "2024"

[dependencies]
anyhow = "1"
fs2 = "0.4"
libc = "0.2"
rustc_version = "0.4"
serde_json = "1"
tempdir = "0.3"
toml = "0.8"
walkdir = "2.3"
home = "0.5"

[dev-dependencies]
lazy_static = "1.0.0"
parking_lot = "0.12"

[features]
